--- a/CounterOptimalProofStructure.ipynb
+++ b/CounterOptimalProofStructure.ipynb
@@ -53,7 +53,7 @@
     "            \n",
     "    return arr\n",
     "\n",
-    "def get_backedges(function2):\n",
+    "def get_backedges(function2):   #Method for representing back edges of procedure as ast.For and ast.while objects\n",
     "    \n",
     "    loop_statements = [ast.For, ast.While]\n",
     "    BackEdges = []\n",
@@ -358,7 +358,7 @@
     }
    ],
    "source": [
-    "def insert_statements(src):\n",
+    "def insert_statements(src):    #Method for Inserting Counter Statements, taking string input\n",
     "    \n",
     "    i = 1\n",
     "    j, Insert = 0, False\n",
@@ -397,61 +397,6 @@
     "    \n",
     "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<function f at 0x0000023E42834BF8>\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "65\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ord('A'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AmanaplanacanalPanama\n"
-     ]
-    }
-   ],
-   "source": [
-    "    s = \"A man, a plan, a canal: Panama\"\n",
-    "    temp = \"\"\n",
-    "    for i in range(len(s)):\n",
-    "            \n",
-    "        if (ord(s[i]) >= 48 and ord(s[i]) <= 57) or (ord(s[i]) >= 97 and ord(s[i]) <= 122) or (ord(s[i]) >= 65 and ord(s[i]) <= 65 + 25):\n",
-    "                temp = temp + s[i]\n",
-    "    print(temp)"
    ]
   },
   {
